# video-crop

./: CMakeLists.txt  README.md  video-crop.cpp
